--- a/trofeos.html
+++ b/trofeos.html
@@ -20,6 +20,24 @@
       text-align: center;
     }
 
+    nav {
+      background: #00337A;
+      display: flex;
+      justify-content: center;
+      padding: 10px;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
     h1 {
       margin: 0;
     }
@@ -66,6 +84,14 @@
   <header>
     <h1>🏆 Trofeos Alpine Academy</h1>
   </header>
+
+  <nav>
+    <a href="index.html">Inicio</a>
+    <a href="equipo.html">Equipo</a>
+    <a href="calendario.html">Calendario</a>
+    <a href="resultados.html">Resultados</a>
+    <a href="trofeos.html">Trofeos</a>
+  </nav>
 
   <main>
     <h2>F1</h2>
