--- a/f1.html
+++ b/f1.html
@@ -188,7 +188,7 @@
         <h3><img class="flag" src="https://flagcdn.com/w20/ma.png" alt="Marruecos"> Charles Evans</h3>
       </div>   
       <div class="piloto">
-        <img src="https://i.imgur.com/PG5CErl.jpeg" alt="Victor Escalante">
+        <img src="https://i.imgur.com/6tU03vC.png alt="Victor Escalante">
         <h3><img class="flag" src="https://flagcdn.com/w20/mx.png" alt="México"> Victor Escalante</h3>
       </div>
       <div class="piloto">
